# NavCogAndroid

./: .gitignore  LICENSE  README.md
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/hulop/jni/: Localizer.java
app/src/main/java/hulop/navcog/: AgreementActivity.java  ConversationEx.java  DialogActivity.java  InitActivity.java  MainActivity.java  PostSurveyDialogFragment.java  ProgressDialogFragment.java  RatingActivity.java  ServerListAdapter.java  ServerSelectionActivity.java  SettingsActivity.java  UserModeAdapter.java  Utils.java  WaitingDialogFragment.java  WebViewActivity.java
app/src/main/java/hulop/navcog/helpers/: BrowserHelper.java  ConfigManager.java  IndoorLocationManager.java  LogHelper.java  ScreenFilter.java  SensorHelper.java  ServiceManager.java  TTSHelper.java
app/src/main/java/hulop/navcog/localizers/: BleLocalizer.java  OSLocalizer.java
app/src/main/res/drawable/: edit_text_frame.xml  ic_clear_white_24dp.xml  ic_configure.xml  ic_refresh_white_24dp.xml  ic_search_white_24dp.xml  side_nav_bar.xml
app/src/main/res/layout/: activity_agreement.xml  activity_dialog.xml  activity_init.xml  activity_main.xml  activity_rating.xml  activity_server_selection.xml  activity_web_view.xml  content_main.xml  dialog_helper_view.xml  list_item_bubble_left.xml  list_item_bubble_right.xml  progress_dialog.xml  screen_filter.xml  server_list_item.xml  user_mode_list_item.xml  waiting_dialog.xml
app/src/main/res/menu/: activity_main_drawer.xml  init.xml  main.xml  rating.xml  server_selection.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  strings_app.xml  strings_system.xml  styles.xml
app/src/main/res/values-ja/: strings.xml  strings_app.xml  strings_system.xml
app/src/main/res/values-ko/: strings.xml  strings_system.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/values-w820dp/: dimens.xml
app/src/main/res/values-zh-rCN/: strings.xml  strings_app.xml  strings_system.xml
app/src/main/res/xml/: pref_developer.xml  pref_general.xml
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
